--- a/src/input.css
+++ b/src/input.css
@@ -12,7 +12,22 @@ form input{
     border-radius: 50%;
     border: 10px solid #2a2a72;
 }
-.repos{
+.card{
+    @apply w-full lg:max-w-3xl rounded-2xl shadow-xl flex flex-col items-center justify-between border-cyan-300 sm:flex-row p-2 md:p-12 my-0;
+}
+.card_h2{
+    @apply mt-0 mb-2 font-bold text-2xl md:text-3xl;
+}
+.card_strong{
+    @apply text-sm ml-2;
+}
+.card_ul{
+    @apply flex list-none justify-between p-0 w-full lg:max-w-md mb-2;
+}
+.card_li{
+    @apply flex items-center;
+}
+.repo{
     text-decoration: none;
     color: #fff;
     background-color: #4c2885;
